--- a/index.html
+++ b/index.html
@@ -3,31 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="wrapper">
+    <div class="image">
+      <img src="images/image-equilibrium.jpg" alt="">
+      <div class="test"><i class="fa-solid fa-eye"></i></div>
+      
+    </div>
+    <div class="informations">
+      <div class="description">
+        <h2>Equilibrium #3429</h2>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+      </div>
+      <div class="price">
+        
+        <p><i class="fa-brands fa-ethereum"></i> 0.041 ETH</p>
+        <p><i class="fa-solid fa-clock"></i> 3 days left</p>
+      </div>
+    </div>
+    <div class="userinfo">
+      <hr>
+      <div class="user">
+        <img src="images/image-avatar.png" alt="">
+        <p>Creation of <span>Jules Wyvern</span></p>  
+      </div>
+    </div>
   </div>
+
+  <script src="https://kit.fontawesome.com/0c918d73e9.js" crossorigin="anonymous"></script>
 </body>
 </html>
