Add a to images

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
   <div class="wrapper">
     <div class="image">
       <img src="images/image-equilibrium.jpg" alt="">
-      <div class="test"><i class="fa-solid fa-eye"></i></div>
+      <a href="images/image-equilibrium.jpg" target="_blank" rel="noopener noreferrer">
+        <div class="test"><i class="fa-solid fa-eye"></i></div>
+      </a>
       
     </div>
     <div class="informations">
       <div class="description">
-        <h2>Equilibrium #3429</h2>
+        <a href="images/image-equilibrium.jpg" target="_blank" rel="noopener noreferrer"><h2>Equilibrium #3429</h2></a>
         <p>Our Equilibrium collection promotes balance and calm.</p>
       </div>
       <div class="price">
@@ -32,7 +34,8 @@
       <hr>
       <div class="user">
         <img src="images/image-avatar.png" alt="">
-        <p>Creation of <span>Jules Wyvern</span></p>  
+        
+        <p>Creation of <a href="images/image-avatar.png" target="_blank" rel="noopener noreferrer"><span>Jules Wyvern</span></a></p>  
       </div>
     </div>
   </div>
